...
              </TouchableOpacity>
              
              <TouchableOpacity
                style={styles.parButton}
                onPress={() => handleParSelect(4)}
              >
                <Text style={styles.parButtonText}>Par 4</Text>
              </TouchableOpacity>
              
              <TouchableOpacity
                style={styles.parButton}
                onPress={() => handleParSelect(5)}
              >
...
